--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
-Version: 1.1.4
+Version: 1.1.4-1
 Date: 2014-12-12
 Authors@R: c(person("Junjie", "Zeng", role = c("cre", "aut"),
     email = "jzen188@aucklanduni.ac.nz"),
